# recsysk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
conf/: deepfm.yaml  din.yaml
conf/algorithms/: din.yaml  popularity.yaml
conf/benchmarks/: amazon_ctr.yaml  criteo_terabyte_ctr.yaml  frappe_ctr.yaml  kuairand_ctr.yaml  kuairec_ctr.yaml  kuaivideo_ctr.yaml  microvideo_ctr.yaml  movielens_1m_ctr.yaml  movielens_ctr.yaml  movielens_seq.yaml  taobao_ad_ctr.yaml
conf/experiments/: deepfm_on_amazon_ctr.yaml  deepfm_on_criteo_terabyte_ctr.yaml  deepfm_on_frappe_ctr.yaml  deepfm_on_kuaivideo_ctr.yaml  deepfm_on_microvideo_ctr.yaml  deepfm_on_movielens_1m_ctr.yaml  deepfm_on_taobao_ad_ctr.yaml  popularity_on_criteo_terabyte_ctr.yaml  popularity_on_frappe_ctr.yaml  popularity_on_kuaivideo_ctr.yaml  popularity_on_microvideo_ctr.yaml  popularity_on_movielens_1m_ctr.yaml  popularity_on_movielens_ctr.yaml  popularity_on_taobao_ad_ctr.yaml
docs/: algorithms.md  benchmarks.md  datasets.md  dev.md  kuairand_schema.md  model_and_algo.md  models.md  sim_addict_fatigue.md
lightning_logs/version_1/: metrics.csv
notebooks/: _dev_setup.py  movielens.ipynb  simulation.ipynb
scripts/: deepfm.py  train.py
src/recsys/: cli.py  data.py  engine.py  runner.py  utils.py
src/recsys/algorithms/: __init__.py  base.py
src/recsys/algorithms/classical/: __init__.py  popularity.py
src/recsys/algorithms/torch/: __init__.py  _augru.py  _mlp.py  base.py  deepfm.py  dien.py  din.py
src/recsys/benchmarks/: __init__.py  amazon_ctr.py  amazon_seq.py  base.py  criteo_terabyte_ctr.py  frappe_ctr.py  kuairand_ctr.py  kuairec_ctr.py  kuaivideo_ctr.py  microvideo_ctr.py  movielens_ctr.py  movielens_seq.py  registry.py  taobao_ad_ctr.py
src/recsys/conf/algorithms/: deepfm.yaml  dien.yaml
src/recsys/conf/benchmarks/: amazon_seq.yaml
src/recsys/conf/experiments/: deepfm_on_movielens_ctr.yaml  dien_on_amazon_seq.yaml  dien_on_movielens_seq.yaml  din_on_amazon_seq.yaml  din_on_movielens_seq.yaml  popularity_on_amazon_ctr.yaml  popularity_on_kuairand_ctr.yaml  popularity_on_kuairec_ctr.yaml  popularity_on_movielens_ctr.yaml
src/recsys/data/: __init__.py  _download.py  amazon.py  criteo_terabyte.py  datasets.py  frappe.py  kuairand.py  kuairec.py  kuaivideo.py  microvideo.py  movielens.py  sequence.py  taobao_ad.py  utils.py
src/recsys/data/builders/: __init__.py  base.py  csv_ctr.py  movielens.py  sequence_ctr.py
src/recsys/data/datamodules/: __init__.py  amazon.py  base.py  criteo_terabyte.py  frappe.py  kuairand.py  kuairec.py  kuaivideo.py  microvideo.py  movielens.py  taobao_ad.py
src/recsys/data/loaders/: __init__.py  movielens.py
src/recsys/data/negatives/: __init__.py  base.py  full_catalog.py  in_batch.py  popularity.py  random_uniform.py  sampled_k.py
src/recsys/data/registry/: __init__.py
src/recsys/data/splits/: __init__.py  base.py  leave_last_out.py  random_split.py  temporal_global.py  user_based.py
src/recsys/data/transforms/: __init__.py  sequence.py  tabular.py
src/recsys/evaluation/: __init__.py  evaluator.py  reporting.py  store.py
src/recsys/metrics/: __init__.py  ctr.py  ranking.py
src/recsys/models/: __init__.py  ctr.py  deepfm.py  din.py  utils.py
src/recsys/schemas/: builder.py  features.py
src/recsys/simulation/: __init__.py  addict_fatigue.py
src/recsys/tasks/: __init__.py  base.py  ctr.py  retrieval.py  sequential.py
