[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=2.3.4"]
build-backend = "setuptools.build_meta"


[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "torch",
]

# define the CUDA-specific index
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true  # Crucial: prevents uv from searching this index for other packages

# tell uv to use that index only on windows
[tool.uv.sources]
torch = [
    {index = "pytorch-cu130", marker = "sys_platform == 'win32'"}
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "notebook>=7.4.7",
    "pytest>=8.4.2",
]
