[build-system]
requires = ["setuptools>=77", "wheel", "numpy>=2.3.4"]
build-backend = "setuptools.build_meta"


[project]
name = "recsysk"
version = "0.1.0"
description = "Framework-agnostic recsys benchmarking harness — pinned benchmarks, pluggable algorithms, reproducible runs."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Sikun Xu", email = "xusikun96@gmail.com" },
]
keywords = ["recommender-systems", "benchmark", "ctr", "deep-learning", "pytorch", "lightning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface-hub>=0.24",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "torch",
]

[project.urls]
Homepage = "https://github.com/iamsikun/recsysk"
Repository = "https://github.com/iamsikun/recsysk"
Issues = "https://github.com/iamsikun/recsysk/issues"

# define the CUDA-specific index
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true  # Crucial: prevents uv from searching this index for other packages

# tell uv to use that index only on windows
[tool.uv.sources]
torch = [
    {index = "pytorch-cu130", marker = "sys_platform == 'win32'"}
]


[project.scripts]
recsys = "recsys.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
recsys = ["conf/**/*.yaml"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "notebook>=7.4.7",
    "pytest>=8.4.2",
]
